# testing-github-actions

./: Dockerfile  Makefile  README.md  action.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  print-cakes.yml  update-dependencies.yml
cakes/: cli.py  flavours.py
tests/: test_flavours.py
