[tool.poetry]
name = "testing-github-actions"
version = "0.1.0"
description = ""
authors = ["Sam Dudley <dudley.co.uk@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cakes"}]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
print-cakes = "cakes.cli:main"
