[tool.poetry]
name = "testing-github-actions"
version = "0.1.0"
description = ""
authors = ["Sam Dudley <dudley.co.uk@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cakes"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^0.991"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
print-cakes = "cakes.cli:main"

[tool.mypy]
strict = true
